# baseline-python

./: .dockerignore  .env  .env.model  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  cli  dev.sh  docker-build.sh  docker-compose.sh  docker-compose.yml  docker-run.sh  install.py  install.sh  pyproject.toml  start copy.sh  start-server.sh  start-with-uvicorn.sh  start.py  start.sh  uvicorn.json
.env.d/models/: .env.dev  .env.prod  .env.test
.github/actions/custom-import-check/: action.yml
.github/actions/env-setup-dev/: action.yml
.github/actions/env-setup-test/: action.yml
.github/actions/import-flow-check/: action.yml
.github/actions/lint/: action.yml
.github/actions/post-and-get-entity/: action.yml
.github/actions/pylint/: action.yml
.github/actions/pythonic-linters/: action.yml
.github/actions/run-linters/: action.yml
.github/actions/unimported-classes-check/: action.yml
.github/actions/unit-tests/: action.yml
.github/actions/unused-classes-check/: action.yml
.github/workflows/: api.yml  general.yml  lint.yml  linters-and-unit-tests.yml  linters.yml  main.yml  system.yml  unit-tests.yml
.github/workflows/api/: main.yml  post_and_get_entity.yml
.github/workflows/lint/: isort.yml  main.yml  mypy.yml  pylint.yml  ruff.yml
.github/workflows/unit-tests/: main.yml  pytest.yml
config/model/: cpu.yml  database.yml  disk.yml  external_services.yml  health_check.yml  logger.yml  logging.yml  memory.yml
config/models/: token_issuer.yml  typicode.yml
docker/: Dockerfile  build.sh  compose-up.sh  docker-compose.yml  run.sh
docker-compose.d/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
docs/patterns/: domain.md  infrastructure.md  interfaces.md  rest-controllers.md  rest-routes.md  services.md
scripts/: _helpers.py  backup_db.py  config_utils.py  deploy-db.sh  deploy_db.py  ensure_venv.py  get-projectname-locations.sh  get_project_name.py  get_project_root.py  install-dependencies.sh  install_dependencies.py  set-deployment-environment.sh  set_up_entra_id.py  validate-environment.sh
src/: main.py
src/composition/: cli_entrypoint.py  infrastructure_instances.py  resources.py  uvicorn_entrypoint.py
src/composition/config_builders/: _helpers.py  accounts.py  authenticator.py  cpu.py  database.py  (+8 more)
src/infrastructure/: abc_infrastructure.py  base_infrastructure.py
src/services/: abc_database_aware_service.py  abc_service.py  account_manager.py  authentication_manager.py  base_database_aware_service.py  base_service.py  blog_manager.py  config_manager.py  database_manager.py  health_manager.py  log_manager.py  logger_passer.py  server_runner.py  user_manager.py
src/shared/: shared_infrastructure.py  types.py
tests/: 00-run-all.sh
tests/linters/: 00-run-all.sh  _helpers.py  abstract_classes_have_an_abstract_method.py  arg_count_check.py  classes_are_implemented.py  classes_are_imported.py  direct_exception_inheritence_check.py  errs_dont_inherit_directly_from_exception.py  fake_abstract_classes_check.py  import-flow-check.sh  imports-flow-in-correct-direction.sh  methods_declare_return_type.py  methods_have_low_arg_count.py  methods_have_low_param_count.py  service_exceptions_are_imported_in_interfaces.py  unimplemented_classes_check.py  unimported_classes_check.py
tests/system/: 00-run-all.sh  direct-exception-inheritence-check.py  linters.sh  run-import-flow-check.sh  run-linters.sh  run-unit-tests.sh  unimplemented-classes-check.py  unimported-classes-check.py  unused-classes-check.py
tests/system_tests/: run-linters.sh  run-unit-tests.sh
utilities/: config.py  ensure_venv.py  get_project_name.py
(+460 files in other folders)
