[project]
name = "PROJECTNAME"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "dacite==1.9.2",
  "dotenv==0.9.9",
  "fastapi==0.120.0",
  "pre-commit==4.3.0",
  "psycopg==3.2.11",
  "pydantic==2.12.3",
  "pyyaml==6.0.3",
  "sqlalchemy==2.0.44",
  "uvicorn==0.38.0",
]

[project.optional-dependencies]
dev = [
  "isort",
  "mypy",
  "pre-commit",
  "pylint",
  "pytest",
  "ruff",
  "types-docker",
  "types-PyYAML",
]
infra = [
  "docker",
  "types-docker"
]

[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
indent = "  "
line_length = 120
src_paths = [
  "src",
  "scripts",
  "tests"
]

[tool.mypy]
explicit_package_bases = true
mypy_path = "src:scripts:tests"

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "scripts"
]
testpaths = [
  "tests"
]

[tool.ruff]
include = [
  "pyproject.toml",
  "src/**/*.py",
  "scripts/**/*.py",
  "tests/**/*.py"
]

[tool.ruff.lint]
select = [
  "W292",   # No Newline at EOF
  "W391"    # Extra Newline(s) at EOF
]
preview = true
