[project]
name = "PROJECTNAME"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "dacite==1.9.2",
  "dotenv==0.9.9",
  "fastapi==0.120.0",
  "pre-commit==4.4.0",
  "psycopg==3.2.11",
  "pydantic==2.12.3",
  "pyyaml==6.0.3",
  "requests==2.32.5",
  "sqlmodel==0.0.27"
]

[project.optional-dependencies]
dev = [
  "isort==7.0.0",
  "mypy==1.18.2",
  "pre-commit==4.4.0",
  "pylint==4.0.2",
  "pytest==9.0.0",
  "ruff==0.14.4",
  "types-docker==7.1.0.20251009",
  "types-psutil==7.0.0.20251001",
  "types-pyyaml==6.0.12.20250915",
]
infra = [
  "docker==7.1.0",
  "psutil==7.1.3",
  "types-docker==7.1.0.20251009",
  "uvicorn==0.38.0"
]

[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
indent = "  "
line_length = 120
src_paths = [
  "scripts",
  "src",
  "tests",
  "utilities"
]

[tool.mypy]
explicit_package_bases = true
mypy_path = ["scripts", "src", "tests"]

[tool.pytest.ini_options]
pythonpath = [
  "scripts",
  "src",
  "utilities"
]
testpaths = [
  "tests"
]

[tool.ruff]
include = [
  "pyproject.toml",
  "scripts/**/*.py",
  "src/**/*.py",
  "tests/**/*.py",
  "utilities/**/*.py"
]

[tool.ruff.lint]
select = [
  "W292",   # No Newline at EOF
  "W391"    # Extra Newline(s) at EOF
]
preview = true
